fixed utf8 issue